codex-rs/tui/src/snapshots/codex_tui__multi_agents__tests__waiting_end_preserves_multiple_agent_blocks.snap
---
source: tui/src/multi_agents.rs
expression: rendered
---
• Finished waiting
  └ Atlas [worker]: Completed
      Вношу две узкие правки в tooling docs: уточняю исключение для `Architect initial draft` и добавляю owner-facing инструкцию по `racex_plan_bundle`.
      Mirror-патч не прошёл через `apply_patch`; tooling-файл отдельно дожму сейчас, а для sibling mirror, если понадобится, пойду через явное разрешение на один безопасный sync-патч.
    Bob [explorer]: Completed
      Need a second pass on the tmux capture.
      The raw rollout is still correct.
